backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: marcusyeoyh/sgdecoding_backend_test_amd64:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "150m"
              memory: "400Mi"
            limits:
              cpu: "750m"
              memory: "800Mi"

          ports:
            - containerPort: 2000
            - containerPort: 8080
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 2000 # Port exposed externally
      targetPort: 2000 # Port inside the backend container
      # nodePort: 32000 # Choose a NodePort between 30000-32767
      name: http-port
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: proxy-port
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: quilljs-port
  type: ClusterIP
